# evolution

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile  RELEASE-NOTES.txt  build.sh  main.cpp
UI/headers/: evolution.h  info_page.h  loading_app_page.h  menu_page.h  page.h  settings_page.h  window.h  window_state.h
UI/sources/: evolution.cpp  info_page.cpp  loading_app_page.cpp  menu_page.cpp  page.cpp  settings_page.cpp  window.cpp  window_state.cpp
assets/info/: info.txt
evolution/headers/: Graphics.h  Object.h  Poison.h  World.h  screen.h
evolution/sources/: Bot.cpp  Eat.cpp  Graphics.cpp  Poison.cpp  World.cpp
headers/: Bot.h  Eat.h  Empty.h  Graphics.h  Object.h  Wall.h  World.h
sources/: Bot.cpp  Empty.cpp  Graphics.cpp  Object.cpp  Wall.cpp  World.cpp
